fixes scrollbar issues

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     font-family: 'Inter', sans-serif;
     height: 100vh;
+    overflow: hidden;
 }
 
 main {
@@ -16,7 +17,6 @@ main {
     background-size: 45%, 8vw, 50%;
     background-position: 95%, 25% 20%, 0% 100%;
     margin-bottom: 1rem;
-    overflow: scroll;
 }
 
 #testimonial-slider {
